working on updated expressions and patterns semantics (this commit does not build)